--- a/Cressiendo/style/css/index.css
+++ b/Cressiendo/style/css/index.css
@@ -25,8 +25,31 @@
     justify-content: center;
     animation: slideDown 1s;
 }
+
+/*html {
+    content: "";
+    background-image: url("../../img/background1.jpg"); 
+    background-size: cover; background-position: center;
+    filter:blur(5px);
+    z-index:-1
+}*/
+
+body::before {
+    content: "";
+    position: fixed; /* Asegura que el fondo cubra toda la pantalla */
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-image: url('../../img/background1.jpg'); 
+    background-size: cover; 
+    background-position: center;
+    filter: blur(5px);
+    z-index: -1;
+}
+
 .logoimg {
-    max-width: 5%;
+    max-width: 50%;
     height: auto;
 }
 
@@ -67,5 +90,7 @@
 p {
     font-family: "Stinger Variable";
     font-size: 20px;
-    color: black;
+    color: rgba(0,0,0,1);
+    background-color: rgba(255, 255, 255, .5);
 }
+
